--- a/public/index.html
+++ b/public/index.html
@@ -125,6 +125,14 @@
     </div>
     <!-- /.container -->
 
+<!-- Barra de Aviso Cookies -->
+<div id="barraaceptacion">
+    <div class="inner">
+        Solicitamos su permiso para obtener datos estad&iacute;sticos de su navegaci&oacute;n en esta web, en cumplimiento del Real Decreto-ley 13/2012. Si contin&uacute;a navegando consideramos que acepta el uso de cookies.
+        <a href="javascript:void(0);" class="ok" onclick="PonerCookie();"><b>OK</b></a> 
+    </div>
+</div>
+
     <!-- jQuery -->
     <script src="js/jquery.js"></script>
 
@@ -156,6 +164,18 @@
 <!-- <script src='//maps.googleapis.com/maps/api/js?sensor=false'></script> -->
 
 <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDNDrIrWABoaDtsu5TFcYieUHdJFd1YEPY&signed_in=true" async defer></script> <!--&callback=initMap -->
+
+<!--Google Analytics -->
+<script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-69607552-1', 'auto');
+  ga('send', 'pageview');
+
+</script>
 
 </body>
 
